# ppaass-desktop

./: Cargo.toml  README.md  angular.json  package-lock.json  package.json  styles.css
src/: app.rs  config_form.rs  form.rs  main.rs  value.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  value.rs
src/app/: app-routing.module.ts
src/app/layout/: app.menu.component.ts
src/component/: input.css  input.rs
